# webapi

./: .env  Cargo.toml  README.md  docker-compose.yml  lib.rs  start_postgres.sh
migrations/: 0001_create_users_table.sql
src/: errors.rs  main.rs  models.rs  utils.rs
src/controllers/: mod.rs  user.rs
src/middleware/: auth.rs  mod.rs
src/repositories/: mod.rs  user.rs
src/services/: mod.rs  user.rs
tests/: integration.rs  service.rs
