[package]
name = "webapi"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "REST API for user management with JWT authentication"
license = "MIT"
repository = "https://github.com/yourusername/webapi"
homepage = "https://yourwebsite.com"
keywords = ["api", "user", "authentication", "hyper", "sqlx"]
categories = ["web-programming"]

[dependencies]
hyper = { version = "1.5.0", features = ["server", "http1"] }
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
jsonwebtoken = "9.3.0"
sha2 = "0.10.8"
hmac = "0.12.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
thiserror = "1.0.64"
hex = "0.4.3"
futures-util = "0.3.31"
anyhow = "1.0.89"